--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "store",
   "version": "1.0.0",
+  "main": "run.ts",
   "scripts": {
     "start": "ts-node run.ts",
     "test": "ts-mocha tests/*.js --exit",
@@ -12,9 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "@types/express": "^4.17.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
